@@ -25,7 +25,6 @@ public class SodiumChlorideShaker extends MicroShaker {
 
     //Create a random salt crystal and add it to the model
     @Override protected void addCrystal( MicroModel model, ImmutableVector2D outputPoint, double volumePerSolidMole, ImmutableVector2D crystalVelocity ) {
-
         model.addSaltCrystal( new SodiumChlorideCrystal( outputPoint,
                                                          generateRandomLattice( new Function0<SodiumChlorideLattice>() {
                                                                                     public SodiumChlorideLattice apply() {
